<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/app_name"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/headline1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sunyatsen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline1" />

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/search"
        android:textSize="18sp"
        android:textColor="#ffffff"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/sunyatsen"
        android:layout_marginTop="20dp"

        android:onClick="searching"
        tools:ignore="OnClick" />


    <EditText
        android:id="@+id/search_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/search_line"
        android:textColor="#888888"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/searchbutton"
        app:layout_constraintTop_toBottomOf="@id/sunyatsen"
        tools:ignore="LabelFor,TextFields"
        android:singleLine="true"/>

    <RadioGroup
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/searchbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        tools:ignore="UnknownId">

        <RadioButton
            android:id="@+id/picture"
            android:text="@string/picture"
            android:textSize="18sp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="clickpicture"
            />

        <RadioButton
            android:id="@+id/video"
            android:text="@string/video"
            android:textSize="18sp"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="clickvideo"
            />
        <RadioButton
            android:id="@+id/qa"
            android:text="@string/qa"
            android:textSize="18sp"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="clickqa"/>

        <RadioButton
            android:id="@+id/news"
            android:text="@string/news"
            android:textSize="18sp"
            android:checked="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="clicknews"/>


    </RadioGroup>

</android.support.constraint.ConstraintLayout>